<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:design="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context="com.example.kseniyaturava.mytest.MainActivity">
    <!--android:background="#9DAECE"-->
    <!--inside id added for fragments(there're more options)-->

    <ScrollView
        style="@android:style/Widget.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:scrollbarStyle="insideInset">

        <LinearLayout
            android:id="@+id/layout_content_vert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/amiko"
                android:lineSpacingExtra="8sp"
                android:text="@string/novedades"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitle_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/amiko"
                android:text="@string/novedades_frase"
                android:textAlignment="viewStart"
                android:textColor="#505254"
                android:textSize="16sp" />




            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recyclerView"
                android:orientation="horizontal">

            </android.support.v7.widget.RecyclerView>





            <TextView
                android:id="@+id/title_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/amiko"
                android:lineSpacingExtra="8sp"
                android:text="@string/categorias"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitle_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/amiko"
                android:lineSpacingExtra="8sp"
                android:text="@string/descubre"
                android:textColor="#505254"
                android:textSize="16sp" />

            <HorizontalScrollView
                android:id="@+id/Hscroll_category"
                android:layout_width="wrap_content"
                android:layout_height="190dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:clipChildren="false">


                <LinearLayout
                    android:id="@+id/scroll_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/layout_drama"
                        android:layout_width="120dp"
                        android:layout_height="190dp"
                        android:orientation="vertical">


                        <ImageView
                            android:id="@+id/img_drama"
                            android:layout_width="120dp"
                            android:layout_height="160dp"
                            android:contentDescription="@string/img_category"
                            android:maxHeight="160dp"
                            android:maxWidth="120dp"
                            android:minHeight="160dp"
                            android:minWidth="120dp" />


                        <Button
                            android:id="@+id/button_drama"
                            android:layout_width="120dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/botton_style"
                            android:fontFamily="@font/amiko"
                            android:text="@string/drama"
                            android:textAllCaps="false"
                            android:textColor="#505254" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/layout_comedy"
                        android:layout_width="120dp"
                        android:layout_height="190dp"
                        android:orientation="vertical">


                        <ImageView
                            android:id="@+id/img_comedy"
                            android:layout_width="120dp"
                            android:layout_height="160dp"
                            android:contentDescription="@string/img_category"
                            android:maxHeight="160dp"
                            android:maxWidth="120dp"
                            android:minHeight="160dp"
                            android:minWidth="120dp" />

                        <Button
                            android:id="@+id/button_comedy"
                            android:layout_width="120dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/botton_style"
                            android:fontFamily="@font/amiko"
                            android:text="@string/comedia"
                            android:textAllCaps="false"
                            android:textColor="#505254" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_fiction"
                        android:layout_width="120dp"
                        android:layout_height="190dp"
                        android:orientation="vertical">


                        <ImageView
                            android:id="@+id/img_fiction"
                            android:layout_width="120dp"
                            android:layout_height="160dp"
                            android:contentDescription="@string/img_category"
                            android:maxHeight="160dp"
                            android:maxWidth="120dp"
                            android:minHeight="160dp"
                            android:minWidth="120dp" />

                        <Button
                            android:id="@+id/button_fiction"
                            android:layout_width="120dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/botton_style"
                            android:fontFamily="@font/amiko"
                            android:text="@string/ciencia_ficcion"
                            android:textAllCaps="false"
                            android:textColor="#505254" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_horror"
                        android:layout_width="120dp"
                        android:layout_height="190dp"
                        android:orientation="vertical">


                        <ImageView
                            android:id="@+id/img_horror"
                            android:layout_width="120dp"
                            android:layout_height="160dp"
                            android:contentDescription="@string/img_category"
                            android:maxHeight="160dp"
                            android:maxWidth="120dp"
                            android:minHeight="160dp"
                            android:minWidth="120dp" />

                        <Button
                            android:id="@+id/button_horror"
                            android:layout_width="120dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/botton_style"
                            android:fontFamily="@font/amiko"
                            android:text="@string/terror"
                            android:textAllCaps="false"
                            android:textColor="#505254" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/layout_accion"
                        android:layout_width="120dp"
                        android:layout_height="190dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/img_accion"
                            android:layout_width="120dp"
                            android:layout_height="160dp"
                            android:contentDescription="@string/img_category"
                            android:maxHeight="160dp"
                            android:maxWidth="120dp"
                            android:minHeight="160dp"
                            android:minWidth="120dp" />

                        <Button
                            android:id="@+id/button_accion"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/botton_style"
                            android:fontFamily="@font/amiko"
                            android:text="@string/acci_n"
                            android:textAllCaps="false"
                            android:textColor="#505254" />
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/title_foro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/amiko"
                android:lineSpacingExtra="8sp"
                android:text="@string/interactua"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/subtittle_foro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/amiko"
                android:text="@string/descubreForos"
                android:textSize="16sp" />

            <HorizontalScrollView
                android:id="@+id/Hscroll_foro"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_new1"
                            android:layout_width="200dp"
                            android:layout_height="300dp"
                            android:adjustViewBounds="false"
                            android:contentDescription="@string/img_new"
                            android:cropToPadding="false"
                            android:scaleType="fitXY" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_new2"
                            android:layout_width="200dp"
                            android:layout_height="300dp"
                            android:adjustViewBounds="false"
                            android:contentDescription="@string/img_new"
                            android:cropToPadding="true"
                            android:scaleType="centerCrop" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_new3"
                            android:layout_width="200dp"
                            android:layout_height="300dp"
                            android:adjustViewBounds="false"
                            android:contentDescription="@string/img_new"
                            android:cropToPadding="true"
                            android:scaleType="fitXY" />
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>




    </ScrollView>


    <FrameLayout
        android:id="@+id/menu_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/bottomNavigationView"
        android:layout_gravity="bottom"
        android:background="#ffff">

        <!--shadow.xml inside-->
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_gravity="top"
            android:background="@drawable/shadow" />

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            app:menu="@menu/menu_navigation" />
        <!-- android:layout_height="wrap_content"
         ALT+ENTER on design to add namespaces-->
        <!---->
    </FrameLayout>
    <!--</RelativeLayout>-->
</android.support.design.widget.CoordinatorLayout>
