...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kseniyaturava.mytest.HomeCategoryActivity">
    <LinearLayout
        android:id="@+id/layout_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
...
                android:textAlignment="center" />
        </LinearLayout>

    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listView"
        android:gravity="center"
        android:columnWidth="136dp"
        android:numColumns="3"
        android:verticalSpacing="1dp"
        android:horizontalSpacing="1dp"
        android:stretchMode="spacingWidthUniform"
...
